--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -25,7 +25,7 @@
 }
 
 .link {
-  color: #e5e5c7; /* ou autre */
+  color: #E2E2B6; /* ou autre */
   text-decoration: none;
   margin: 0 20px;
   position: relative;
