page accueil ok, ajout d'une ombre pour distinguer le header des autres pages

--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -2,6 +2,7 @@
   background-color: #010A12;
   padding: 1rem 2rem;
   color: #E2E2B6;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.8);
 }
 
 .container {
