--- a/src/app/styles/footer.css
+++ b/src/app/styles/footer.css
@@ -70,9 +70,12 @@
   }
   
   .carbon-badge-wrapper {
-    position: static;
     transform: scale(0.65);
     order: 2;
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+    margin: 0 auto 0 auto;
   }
 }
 
@@ -90,7 +93,8 @@
   .carbon-badge-wrapper {
     transform: scale(0.6);
     display: flex;
-    justify-content: center;
+  justify-content: center;
+  margin: 0 auto 0 auto;
   }
 }
 
@@ -111,9 +115,9 @@
   
   .carbon-badge-wrapper {
     transform: scale(0.55);
-    width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
   }
 }
 
