--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -28,12 +28,6 @@
   z-index: 1001;
 }
 
-.logoSection img {
-  height: auto;
-  max-height: 60px;
-  width: auto;
-}
-
 /* Navigation desktop */
 .nav {
   display: flex;
@@ -110,10 +104,6 @@
     padding: 1rem 1.5rem;
   }
   
-  .logoSection img {
-    max-height: 50px;
-  }
-  
   .nav {
     gap: 5rem;
   }
@@ -128,11 +118,6 @@
 @media (max-width: 640px) {
   .header {
     padding: 0.75rem 1rem;
-  }
-  
-  .logoSection img {
-    max-height: 45px;
-    max-width: 120px;
   }
   
   /* Afficher le menu hamburger */
@@ -215,11 +200,6 @@
     padding: 0.75rem;
   }
   
-  .logoSection img {
-    max-height: 40px;
-    max-width: 100px;
-  }
-  
   .nav {
     width: 100%;
     right: -100%;
@@ -232,6 +212,10 @@
   .nav .link {
     font-size: 1rem;
     padding: 0.875rem 1.25rem;
+  }
+
+  .logo {
+    height: 80px;
   }
 }
 
